<resources>
    <string name="app_name">Upcoming Events</string>
    <string name="add_events">ADD EVENTS</string>
    <string name="view_events">VIEW EVENTS</string>
    <string name="edit_events">EDIT EVENTS</string>
    <string name="enter_the_date">Enter the date</string>
    <string name="add_event">ADD EVENT</string>
    <string name="dd_mm_yy">dd/mm/yy</string>
    <string name="describe_event_here">Describe event here</string>
    <string name="your_events">YOUR EVENTS</string>
    <string name="next_view">NEXT VIEW</string>
    <string name="next_event">next event</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="edit">Edit</string>
    <string name="message">Message</string>
    <string name="next">Next</string>
    <string name="date">Date</string>
    <string name="events">EVENTS</string>
    <string name="delete">DELETE</string>
    <string name="todo">TODO</string>
</resources>
