<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventsHandlingActivity">

    <Button
        android:id="@+id/addbtn"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray"
        android:text="@string/add_events"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32999998" />

    <Button
        android:id="@+id/viewbtn"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@android:color/darker_gray"
        android:text="@string/view_events"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/addbtn"
        app:layout_constraintStart_toStartOf="@+id/addbtn"
        app:layout_constraintTop_toBottomOf="@+id/addbtn" />

    <Button
        android:id="@+id/editbtn"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:background="@android:color/darker_gray"
        android:text="@string/edit_events"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/viewbtn"
        app:layout_constraintStart_toStartOf="@+id/viewbtn"
        app:layout_constraintTop_toBottomOf="@+id/viewbtn" />
</androidx.constraintlayout.widget.ConstraintLayout>